# Startup-Scouting-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  scout.db
.github/workflows/: daily.yml
config/: companies_in_pipeline.yaml  fit_profile.yaml
digests/: 2026-05-16.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-25.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  (+10 more)
docs/: index.html
prompts/: enrichment.md  scoring.md  weekly_synthesis.md
src/scout/: __init__.py  cli.py  models.py  pipeline.py
src/scout/digest/: __init__.py  dashboard.py  markdown.py
src/scout/enrichment/: __init__.py  careers.py  claude.py  linkedin_urls.py
src/scout/outreach/: __init__.py  angle.py
src/scout/scoring/: __init__.py  geo_filter.py  rubric.py
src/scout/sources/: __init__.py  base.py  eu_startups.py  mock.py  rss.py  sifted.py  tech_eu.py  tech_funding_news.py  techcrunch.py  uktn.py
src/scout/storage/: __init__.py  db.py
tests/: test_geo_filter.py  test_name_extraction.py  test_schema_constraints.py  test_scoring.py
tests/fixtures/: mock_funding.json
