[project]
name = "startup-scouting-agent"
version = "0.1.0"
description = "Surface startups that just raised and need their first finance leader."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.9.0",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
scout = "scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
